ex03) still preparation: Point class
  Following the description of the subject, attributes of point are const Fixed x and y.
  because of const, coppy assignment operator should be in private and no definition,
  no setter function as well.

--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: athonda <athonda@student.42singapore.sg    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/05 10:16:03 by athonda           #+#    #+#              #
-#    Updated: 2025/05/05 10:16:34 by athonda          ###   ########.fr        #
+#    Updated: 2025/05/06 22:22:09 by athonda          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,8 @@ NAME = BSP
 
 SRC_DIR = src
 SRC_F	=	main.cpp \
-			Fixed.cpp
+			Fixed.cpp \
+			Point.cpp
 
 SRC = $(SRC_F:%.c=%.c)
 
